# @author Michele Lora

###############################################################################
# CMake file for the CHASE Library
# @author Michele Lora
###############################################################################

add_subdirectory(core)
add_subdirectory(patternsOnNetworks)
add_subdirectory(LTLContracts)