# @author Michele Lora

###############################################################################
# CMake file for the CHASE Library
# @author Michele Lora
###############################################################################

add_subdirectory(core)
add_subdirectory(dsl_frontend)
add_subdirectory(logics_frontend)
add_subdirectory(pychase)
add_subdirectory(logistics)
